<resources>
    <string name="app_name">Goonj</string>
    <string name="facebook_app_id">1907140572877408</string>
    <string name="skip">Skip</string>
    <string name="join_now">Join Now</string>
    <string name="watch_live_tv_anytime_anywhere">watch live tv anytime, anywhere</string>
    <string name="get_free_trial">Get 7 Days Free Trial</string>
    <string name="telenor_number">sign in via telenor number</string>
    <string name="easypaisa_number">continue with easypaisa</string>
    <string name="by_subscribing_you_are_giving_consent_to_renewal_ncharging">* By subscribing, you are giving consent to renewal\ncharging</string>
    <string name="login_with">Login With</string>
    <string name="sing_in">sign in</string>
    <string name="next">next</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="you_will_be_charged">You will be charged from your account balance. You\ncan deactivate anytime from settings\n\nCancel anytime from billing charged section, no\ncharges at all.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="by_signing_in_i_agree_to_user_agreement_and">By signing in, I agree to user agreement and</string>
    <string name="help">Help</string>
    <string name="verify">verify</string>
    <string name="for_package_conversion_or_cancellation">for package conversion or cancellation</string>
    <string name="go_to_profile_subscription"><![CDATA[go to profile > subscription]]></string>
    <string name="shows_web_series_darama_action_ncomedy_and_pranks">shows, web series, drama, action,\ncomedy and pranks</string>
    <string name="subscribe_now">subscribe now</string>
    <string name="comedy_shows">comedy shows</string>
    <string name="by_subscribing_you_are_agreeing_to_weekly_auto_renewal_charging">By subscribing you are agreeing to weekly auto renewal charging</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">GoonjDefaultNoti</string>
</resources>