<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/get_started_bg">

    <ProgressBar
        android:layout_gravity="center"
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/logo_include"
            layout="@layout/goonj_header_logo"/>


        <TextView
            android:id="@+id/watch_live_tv_anytime_anywhere"
            app:layout_constraintTop_toBottomOf="@id/logo_include"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/watch_live_tv_anytime_anywhere"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:fontFamily="@font/montserrat_bold"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/package_name"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/watch_live_tv_anytime_anywhere"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:fontFamily="@font/montserrat_bold"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:visibility="invisible"
            android:id="@+id/package_price"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@id/package_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/greenish"
            android:fontFamily="@font/montserrat_bold"
            android:textStyle="bold"/>



        <LinearLayout
            android:id="@+id/telenor_number"
            android:background="@drawable/simple_focused_button_selector"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/package_price"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:gravity="center">
            <ImageView
                android:src="@drawable/tp_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:padding="10dp"
                android:cropToPadding="true"/>
            <TextView
                android:fontFamily="@font/montserrat_bold"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/telenor_number"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ep_number"
            android:background="@drawable/simple_focused_button_selector"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/telenor_number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:clickable="true">
            <ImageView
                android:src="@drawable/ep_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:padding="5dp"
                android:cropToPadding="true"/>
            <TextView
                android:fontFamily="@font/montserrat_bold"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/easypaisa_number"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:visibility="invisible"
            android:id="@+id/cancellation_text"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/ep_number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/for_package_conversion_or_cancellation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="true"/>

        <TextView
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/cancellation_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/go_to_profile_subscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/link_blue"
            android:textAllCaps="true"/>

        <TextView
            android:visibility="invisible"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/by_subscribing_you_are_giving_consent_to_renewal_ncharging"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>