<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.activities.LoginActivity"
    android:background="@color/colorPrimary">

    <include
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        layout="@layout/screen_header"/>

    <include
        android:id="@+id/logo_include"
        layout="@layout/goonj_header_logo"/>

    <TextView
        android:id="@+id/login_text"
        app:layout_constraintTop_toBottomOf="@+id/logo_include"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/login_text"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/watch_live_tv_anytime_anywhere"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/login_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/watch_live_tv_anytime_anywhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textStyle="bold"/>



    <LinearLayout
        android:id="@+id/telenor_number"
        android:background="@drawable/simple_focused_button_selector"
        android:layout_width="280dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/watch_live_tv_anytime_anywhere"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="30dp"
        android:clickable="true"
        android:gravity="center">
        <ImageView
            android:src="@drawable/tp_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:padding="10dp"
            android:cropToPadding="true"/>
        <TextView
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/telenor_number"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ep_number"
        android:background="@drawable/simple_focused_button_selector"
        android:layout_width="280dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/telenor_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:clickable="true">
        <ImageView
            android:src="@drawable/ep_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:padding="5dp"
            android:cropToPadding="true"/>
        <TextView
            android:textStyle="bold"
            android:textAllCaps="true"
            android:text="@string/easypaisa_number"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/by_subscribing_you_are_giving_consent_to_renewal_ncharging"
        android:textColor="@color/white"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>