<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.activities.LoginActivity"
    android:background="@color/colorPrimary">

    <include
        android:id="@+id/header1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        layout="@layout/goonj_header_logo_with_header_bar"/>

    <TextView
        android:id="@+id/watch_live_tv_anytime_anywhere"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/header1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/enter_your_mobile_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:textStyle="bold"/>



    <FrameLayout
        android:background="@drawable/enter_mobile_number_et_bg"
        android:id="@+id/mobile_number"
        android:layout_width="280dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/watch_live_tv_anytime_anywhere"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp">
        <EditText
            android:padding="5dp"
            android:textColorHint="@color/cloudy_gray"
            android:hint="034"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/next"
        android:background="@drawable/simple_focused_button_selector"
        android:layout_width="280dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@+id/mobile_number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:clickable="true">
        <TextView
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:text="@string/next"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <TextView
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/next"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/you_will_be_charged"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:justificationMode="inter_word"/>

</androidx.constraintlayout.widget.ConstraintLayout>