<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/logo_include"
                layout="@layout/comedy_header_logo"/>


            <TextView
                android:id="@+id/watch_live_tv_anytime_anywhere"
                android:text="@string/comedy_shows"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:layout_gravity="bottom|center_horizontal"
                android:paddingBottom="10dp"/>
        </FrameLayout>

        <TextView
            android:id="@+id/package_name"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/head"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="subscribe in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/package_price"
            app:layout_constraintTop_toBottomOf="@id/package_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="Rs. 7+tax/week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/consent"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/package_price"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="Weekly charges of Rs. 7+tax will be\ndeducted from your mobile balance."
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"/>


        <LinearLayout
            android:id="@+id/telenor_number"
            android:background="@drawable/simple_focused_button_selector"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/consent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="50dp"
            android:clickable="true"
            android:gravity="center">
            <ImageView
                android:src="@drawable/tp_logo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="fitXY"
                android:padding="10dp"
                android:cropToPadding="true"/>
            <TextView
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/telenor_number"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:text="@string/by_subscribing_you_are_agreeing_to_weekly_auto_renewal_charging"
            android:textColor="@color/white"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/telenor_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>

        <TextView
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:text="@string/by_subscribing_you_are_giving_consent_to_renewal_ncharging"
            android:textColor="@color/white"
            android:layout_marginBottom="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>